--- a/about.html
+++ b/about.html
@@ -42,11 +42,7 @@
   <header id="header" class="fixed-top d-flex align-items-center ">
     <div class="container d-flex justify-content-between align-items-center">
 
-      <div class="logo">
-        <h1 class="text-light"><a href="index.html"><span>Moderna</span></a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      </div>
+      <a href="index.html"><img src="assets/img/logo.png" width="150"></a>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -88,16 +84,16 @@
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Who We Are</h3>
             <p class="fst-italic">
-              TM Accountancy is a small accountancy practice with a large reputation based in Chester Le Street. 
-              Established as a part time business in 2003 the practice has gone from strength to strength and is now serving 
-              clients across the region from Northumberland and Durham to Tyne and Wear and most places in between.
+              TM Accountancy is a small accountancy practice. 
+              The practice has gone from strength to strength and is now serving 
+              clients across the region.
             </p>
             <p>
               We feel it is important for us to get to know our clients and their business. We aim to develop strong relationships that offer the best support and advice for our client’s needs. We pride ourselves on high levels of customer service and believe in exceeding expectations at all times.<p></p>
 
-We are passionate about your business and see ourselves as a partner in it. We want your business to grow and will offer you proactive business advice whilst ensuring you pay the lowest amount of tax legally possible. Your business is our business; your prosperity is our prosperity.<p></p>
+              We are passionate about your business and see ourselves as a partner in it. We want your business to grow and will offer you proactive business advice whilst ensuring you pay the lowest amount of tax legally possible. Your business is our business; your prosperity is our prosperity.<p></p>
 
-Whether you are thinking of starting your own business or have an existing business that is ready for a financial health check do not delay; call us today. You won’t be disappointed.
+              Whether you are thinking of starting your own business or have an existing business that is ready for a financial health check do not delay; call us today. You won’t be disappointed.
             </p>
           </div>
         </div>
